<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Test</string>
    <string name="action_settings">Settings</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="confirm_password_hint">Confirm password</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="female_radio_button">female</string>
    <string name="male_radio_button">male</string>
    <string name="other_radio_button">other</string>

    <string-array name="valid_mailbox_array">
        <item>fudan.edu.cn</item>
        <item>sjtu.edu.cn</item>
    </string-array>

    <string name="title_activity_test">test</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_section1">Chat</string>
    <string name="title_section2">Contacts</string>
    <string name="title_section3">Rooms</string>
    <string name="title_section4">Me</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
