<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context="com.meow.meow.test.signUpActivity">


    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Sign Up"
        android:id="@+id/signUpTitle"
        android:textSize="50dp"
        android:textColor="@android:color/white"
        android:background="@android:color/black"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:paddingLeft="10dp"
        android:paddingBottom="10dp"
        android:paddingTop="5dp"
        />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/signUpTitle"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/usernameSignUp"
            android:layout_gravity="center_horizontal"
            android:paddingLeft="10dp"
            android:hint="@string/username_hint"
            android:textColor="@color/hint_foreground_material_light"
            android:layout_marginBottom="20dp" />

        <RadioGroup
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/genderRadioGroup"
            android:gravity="center_horizontal"
            android:layout_marginBottom="20dp">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female_radio_button"
                android:id="@+id/femaleRadioButton"
                android:layout_weight="2.0"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male_radio_button"
                android:id="@+id/maleRadioButton"
                android:layout_weight="2.0"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/other_radio_button"
                android:id="@+id/otherRadioButton"
                android:layout_weight="1.0"/>
        </RadioGroup>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp">

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textEmailSubject"
                android:id="@+id/mailSubjectSignUp"
                android:ems="8"
                android:layout_weight="1.0"
                android:hint="Mail"
                android:paddingLeft="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="\@"
                android:id="@+id/at"
                android:layout_weight="1.0"/>

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/mailboxSignUp"
                android:layout_weight="1"
                android:gravity="start"
                />
        </LinearLayout>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/passwordSignUp"
            android:layout_gravity="center_horizontal"
            android:paddingLeft="10dp"
            android:hint="@string/password_hint"
            android:textColor="@color/hint_foreground_material_light"
            android:layout_marginBottom="20dp"
            android:inputType="textPassword" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/confirmPasswordSignUp"
            android:layout_gravity="center_horizontal"
            android:paddingLeft="10dp"
            android:hint="@string/confirm_password_hint"
            android:textColor="@color/hint_foreground_material_light"
            android:layout_marginBottom="20dp"
            android:inputType="textPassword" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Submit"
            android:id="@+id/submitSignUp"
            android:layout_gravity="center_horizontal"
            android:background="@android:color/background_dark"
            android:textColor="@android:color/white" />


    </LinearLayout>
</RelativeLayout>
